[gd_scene load_steps=13 format=3 uid="uid://bq4r28jv36sep"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_6d860"]
[ext_resource type="Texture2D" uid="uid://ma18qtx1qeta" path="res://Art/Icons/WhiteCircle.png" id="2_jepl7"]
[ext_resource type="AudioStream" uid="uid://w5hhq2cl1qui" path="res://Audio/SFX/PizzaTime_Walk.wav" id="2_xht7t"]
[ext_resource type="AudioStream" uid="uid://dab7nbdnypttn" path="res://Audio/SFX/PizzaTime_Jump01.wav" id="3_3xvii"]
[ext_resource type="AudioStream" uid="uid://c4kpq7gwyehef" path="res://Audio/SFX/PizzaTime_Jump02.wav" id="4_l47gu"]
[ext_resource type="AudioStream" uid="uid://48nitw4vbmhn" path="res://Audio/SFX/PizzaTime_Jump03.wav" id="5_moyer"]
[ext_resource type="AudioStream" uid="uid://dv2q0e8ff7ldb" path="res://Audio/SFX/PizzaTime_Jump04.wav" id="6_o22b6"]
[ext_resource type="PackedScene" uid="uid://bw3e72fqxwb7" path="res://Scenes/Prefabs/pizza_v_5_3.tscn" id="7_kec1n"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="9_7uv1p"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cyhp0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_esyaj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_87ajx"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_e47yb"]
material = SubResource("StandardMaterial3D_87ajx")
size = Vector3(0.2, 0.2, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_7hafm"]
size = Vector3(0.2, 0.2, 1.5)

[sub_resource type="Animation" id="Animation_ykda8"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.365709, -0.0482198, 0.0183219)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.7, -0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/DeathScreen:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jihoy"]
resource_name = "attack_melee"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.872665, 0), Vector3(0, -0.872665, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/WeaponPivot/WeaponModel/WeaponHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/WeaponPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.8, -0.7, -1.2), Vector3(0.8, -0.7, -1.2)]
}

[sub_resource type="Animation" id="Animation_la2qo"]
resource_name = "attack_throw"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.365709, 1.53902, 0.0183219), Vector3(0.365709, -0.0482198, 0.0183219)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, -0.7, -0.6), Vector3(0.5, -0.7, -0.1)]
}

[sub_resource type="Animation" id="Animation_22588"]
resource_name = "fade_to_black"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/DeathScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dytqh"]
_data = {
"RESET": SubResource("Animation_ykda8"),
"attack_melee": SubResource("Animation_jihoy"),
"attack_throw": SubResource("Animation_la2qo"),
"fade_to_black": SubResource("Animation_22588")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_it7v1"]
bg_color = Color(0.219608, 0, 0.423529, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oc1ly"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
floor_stop_on_slope = false
script = ExtResource("1_6d860")
walking_sound = ExtResource("2_xht7t")
jumping_sounds = Array[AudioStreamWAV]([ExtResource("3_3xvii"), ExtResource("4_l47gu"), ExtResource("5_moyer"), ExtResource("6_o22b6")])

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_cyhp0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_esyaj")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="ProjectileThrowTrajectory" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, -1.5)
target_position = Vector3(0, 0, -1)
collision_mask = 0
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="WallDetectionRayCast3D" type="RayCast3D" parent="Head"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1, 0)
target_position = Vector3(0.6, 0, 0)
debug_shape_custom_color = Color(1, 1, 0, 1)
debug_shape_thickness = 5

[node name="StepDetectionRayCast3D" type="RayCast3D" parent="Head"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1.5, 0)
target_position = Vector3(0.5, 0, 0)
debug_shape_custom_color = Color(1, 1, 0, 1)
debug_shape_thickness = 5

[node name="WeaponPivot" type="Node3D" parent="Head"]
transform = Transform3D(0.998353, -0.0355339, -0.0450135, 0.0171093, 0.933713, -0.357611, 0.0547371, 0.356253, 0.932783, 0.5, -0.7, -0.1)

[node name="pizza_v5" parent="Head/WeaponPivot" instance=ExtResource("7_kec1n")]
transform = Transform3D(2.08233, -1.13553, -0.197174, 1.13391, 2.09138, -0.0692885, 0.206321, -0.0333175, 2.37081, -0.0214876, -0.00947267, -0.650531)

[node name="WeaponModel" type="MeshInstance3D" parent="Head/WeaponPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, -0.7)
visible = false
mesh = SubResource("BoxMesh_e47yb")

[node name="WeaponHitbox" type="Area3D" parent="Head/WeaponPivot/WeaponModel"]
collision_layer = 0
collision_mask = 12
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/WeaponPivot/WeaponModel/WeaponHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_7hafm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dytqh")
}

[node name="HUD" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_7uv1p")

[node name="Target" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Outline" type="TextureRect" parent="HUD/Target"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jepl7")
expand_mode = 1

[node name="Inner" type="TextureRect" parent="HUD/Target"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jepl7")
expand_mode = 1

[node name="TimerLabel" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 20.0
offset_top = 15.0
offset_right = 100.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "00:00"

[node name="CheckpointLabel" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.0
offset_top = 30.0
offset_right = 276.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "NEW CHECKPOINT REACHED!"
horizontal_alignment = 1

[node name="FPSLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "60"
horizontal_alignment = 2

[node name="DeathScreen" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="PauseMenu" type="Control" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_it7v1")

[node name="MenuTitleLabel" type="Label" parent="HUD/PauseMenu/Panel"]
layout_mode = 2
offset_left = 11.0
offset_top = 15.0
offset_right = 139.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 20
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -43.0
offset_right = 64.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="HUD/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
text = "RESUME"

[node name="OptionsButton" type="Button" parent="HUD/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
text = "OPTIONS"

[node name="MainMenuButton" type="Button" parent="HUD/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
disabled = true
text = "MAIN MENU"

[node name="CloseButton" type="Button" parent="HUD/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
text = "CLOSE"

[node name="OptionsMenu" type="Control" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -110.0
offset_right = 90.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_it7v1")

[node name="MenuTitleLabel" type="Label" parent="HUD/OptionsMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 15.0
offset_right = 64.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 20
text = "OPTIONS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/OptionsMenu/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -171.0
offset_right = 75.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="TimerCheckButton" type="CheckBox" parent="HUD/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
button_pressed = true
text = "SHOW TIMER"

[node name="FPSCheckButton" type="CheckBox" parent="HUD/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
button_pressed = true
text = "SHOW FPS"

[node name="AudioVolumeLabel" type="Label" parent="HUD/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
text = "AUDIO VOLUME:"

[node name="AudioVolumeSlider" type="HSlider" parent="HUD/OptionsMenu/Panel/VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 0
min_value = -30.0
max_value = 0.0

[node name="BackButton" type="Button" parent="HUD/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/hover = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oc1ly")
theme_override_styles/focus = SubResource("StyleBoxFlat_oc1ly")
text = "BACK"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
volume_db = -10.0
pitch_scale = 0.8

[connection signal="body_entered" from="Head/WeaponPivot/WeaponModel/WeaponHitbox" to="." method="_on_weapon_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="HUD/PauseMenu/Panel/VBoxContainer/ResumeButton" to="HUD" method="_on_resume_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/Panel/VBoxContainer/OptionsButton" to="HUD" method="_on_options_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/Panel/VBoxContainer/CloseButton" to="HUD" method="_on_close_button_pressed"]
[connection signal="toggled" from="HUD/OptionsMenu/Panel/VBoxContainer/TimerCheckButton" to="HUD" method="_on_timer_check_button_toggled"]
[connection signal="toggled" from="HUD/OptionsMenu/Panel/VBoxContainer/FPSCheckButton" to="HUD" method="_on_fps_check_button_toggled"]
[connection signal="value_changed" from="HUD/OptionsMenu/Panel/VBoxContainer/AudioVolumeSlider" to="HUD" method="_on_audio_volume_slider_value_changed"]
[connection signal="pressed" from="HUD/OptionsMenu/Panel/VBoxContainer/BackButton" to="HUD" method="_on_options_back_button_pressed"]
